# gw-smc

./: .gitignore  .pre-commit-config.yaml  .zenodo.json  README.md  environment.yml  pyproject.toml
.github/docker/: Dockerfile
.github/workflows/: build-container.yml  pages.yml
data_release/: .gitignore  Makefile  README.md  config.mk  fetch_and_rename_bns_results.py  fetch_and_rename_pp_test_results.py
docs/: Makefile  _config.yml  _toc.yml  bbh_analyses.md  bns_analyses.md  build.sh  data_release.md  environment.md  intro.md  real_data.md  requirements.txt  simulated_data.md  smc.md
experiments/real_data/: .gitignore  Makefile  README.md  config.mk  fetch_psd.py  make_plots.py
experiments/real_data/GW150914/: GW150914_pocomc.ini
experiments/real_data/GW200129/: GW200129_pocomc.ini
experiments/simulated_data/: bbh_injections_seed_1234.json  bbh_priors.prior  dynesty_pp_test_reference.ini  pocomc_basic_test.ini
experiments/simulated_data/bns/: .gitignore  GW190425-like.json  Makefile  bns_aligned.prior  bns_aligned_with_tides.prior  bns_aligned_without_tides.prior  bns_precessing_with_tides.prior  bns_precessing_without_tides.prior  compute_js.py  config.mk  dynesty_aligned_tides.ini  (+19 more)
gwtc_data_releases/: .gitignore  Makefile  README.md  config.mk
plotting/: .gitignore  Makefile  README.md  bns_results.ipynb  config.mk  plot_beta.ipynb  pp_plot.ipynb  pp_plot.py  pp_test_comparison.ipynb  pp_test_jsd.ipynb  temperature_plot.ipynb
src/gw_smc_utils/: __init__.py  js.py  kde.py  paper.mplstyle  plotting.py  posterior.py  results.py  utils.py
(+28 files in other folders)
