[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "gw-smc-utils"
description = "Utilities for gw-smc paper"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
]
dependencies = [
    "numpy",
    "scipy",
    "pesummary",
    "h5py",
]
dynamic = ["version"]

[tool.setuptools_scm]

[project.scripts]
gw_smc_utils_plot_event = "gw_smc_utils.cli.event_plots:main"
